<resources>
    <string name="app_name">Home farmer</string>
    <string name="inst">Instruction</string>
    <string name="inst_using_app">Hello</string>
    <string name="clear">Clear</string>
    <string name="title_info_page1">Take a photo for processing</string>
    <string name="context_info_page1">The first button allows you to take a picture of the leaf of
        the plant on which, in your opinion, there is a focus of the disease</string>
    <string name="title_info_page2">Open the list of saved reports</string>
    <string name="context_info_page2">The second button allows you to review past reports that you
        wish to save.</string>
    <string name="title_info_page3">Viewing photos from the gallery</string>
    <string name="context_info_page3">The third button allows you to view the saved photos</string>
    <string name="refresh_internet">Refresh</string>
    <string name="error_internet">There is no internet connection</string>
    <string name="feedback">Feedback</string>
    <string name="result_processing">Result of processing</string>
    <string name="list_defects">The following defects were found:</string>
    <string name="item_list_defects" translatable="false">• %s\n</string>
    <string name="recommendations">Recommendations:</string>
    <string name="save">Save</string>
    <string name="template_report">Report: %s</string>
    <string name="MailError">Email app not found</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>

</resources>